# Online_Market_Place

./: .env.example  README.md  auth.py  csv_debug.txt  fixes.md  phase2.md  pyproject.toml  requirements.txt  server_log.txt  session_manager.py  template_engine.py
carts/: handlers.py  queries.py  routes.py
core/: handlers.py  queries.py  router.py  routes.py
core/app/: __init__.py  router.py  server.py  template_engine.py
core/auth/: auth.py  session_manager.py
core/db/: __init__.py  config.py  db.py
core/http/: http_parser.py  response_builder.py  test_http.py
dashboard/: handlers.py  queries.py  routes.py
deposit/: handlers.py  queries.py  routes.py
external_api/: README.md
external_api/myapp/: db_utils.py  tests.py  urls.py  views.py
external_api/myproject/: settings.py  urls.py
inventory/: handlers.py  queries.py  routes.py
items/: handlers.py  queries.py  routes.py
messages/: handlers.py  queries.py  routes.py
scratch/: check_db.py  check_gen_hash.py  check_password.py  hash_pass.py  test_login.py  update_db.py  update_images.py
sql/: schema.sql  seed.sql
static/css/: cart.css  css1.css  dashboard.css  edit_item.css  inventory.css  item.css  items.css  login.css  messages.css  newItem.css  profile.css  stylesheet1.css
templates/: base.html
templates/api/: test_api.html
templates/carts/: cart.html
templates/core/: about.html  contactus.html  index.html  login.html  profile.html  signup.html  terms.html  user_detail.html
templates/dashboard/: dashboard.html  make_review.html  (+3 more)
wishlist/: handlers.py  queries.py  routes.py
(+17 files in other folders)
